--- a/ems-frontend_react/public/index.html
+++ b/ems-frontend_react/public/index.html
@@ -17,7 +17,7 @@
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="body"> 
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
